--- a/131-port-80.conf
+++ b/131-port-80.conf
@@ -18,7 +18,42 @@
 </Directory>
 
 <Directory /var/www/131-port-80/datos>
+	DirectoryIndex index.html
+	Options Indexes FollowSymLinks MultiViews
+	AllowOverride None
+	<RequireAll>
+		AuthName "Acceso privado"
+		AuthType Basic
+		AuthUserFile /etc/apache2/passwd
+		Require user aitana
+	</RequireAll>
+</Directory>
+
+<Directory /var/www/131-port-80/test>
+	DirectoryIndex	prueba.html
+	Options Indexes FollowSymLinks MultiViews
+	AllowOverride None
+	Require all granted
+</Directory>
+
+
+<Directory /var/www/131-port-80/wordpress>
+	DirectoryIndex index.php
+	Options Indexes FollowSymLinks MultiViews
+	AllowOverride None
+	Require all granted 
+</Directory>
+
+
+<Directory /var/www/131-port-80/ejemplo>
 	DirectoryIndex	index.html
+	Options FollowSymLinks MultiViews
+	AllowOverride None
+	Require all granted
+</Directory>
+
+<Directory /var/www/131-port-80/phpmyadmin>
+	DirectoryIndex	index.php
 	Options FollowSymLinks MultiViews
 	AllowOverride None
 	Require all granted
